# tripleo-quickstart-dci

./: README.md  setup.cfg
ansible/: bootstrap.yml  hosts
ansible/files/: bash_history  internal-requirements.txt  motd
ansible/files/hooks/: running.yml  running.yml.j2
ansible/templates/: clouds.yaml.j2  dcirc.j2  dockerrc.j2  openrc.j2  settings.j2
ansible/usr/local/share/ansible/roles/overcloud-prep-containers/templates/: dci-overcloud-prep-containers.sh.j2
config/release/: rhos-10-baseos-undercloud-dci.yml  rhos-baseos-undercloud-dci.yml
roles/overcloud-prep-containers/templates/: dci-overcloud-prep-containers.sh.j2
