[metadata]
name = tripleo-quickstart-dci
summary = Integration of DCI with TripleO-Quickstart
description-file =
    README.md
author = Distributed-CI Team
author-email = goneri@redhat.com
home-page = https://code.engineering.redhat.com/gerrit/gitweb?p=tripleo-environments.git
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    config = config/*
    usr/local/share/ansible/roles = roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
